examples/typechecking/trait_propagation.an

bar: a = extern bar

ability Baz a = baz: fn a -> Unit

foo () = baz bar

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (bar: a) = extern "bar"
// 
// type Baz a [env] =
//     baz: fn a [[env]] -> Unit
// 
// (foo: fn Unit -> Unit) () = (baz: fn _ {Baz _} [_] -> Unit) (bar: _) {(error)}

// expected stderr:
// examples/typechecking/trait_propagation.an:6:10
// 6 | foo () = baz bar	// error: No implicit found for type Baz _ required by parameter 2 of baz
//   |          ^^^
// 
// Found 1 error and 0 warnings

